[package]
name = "mesh_gl_renderer"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["mesh_gl_renderer"]
description = "mesh gl renderer for scene renderer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-mesh_gl_renderer.git"
homepage = "https://github.com/nathanfaucett/rs-mesh_gl_renderer"

exclude = ["example"]

[dependencies.gl]
version = "0.6.1"

[dependencies.scene_graph]
git = "https://github.com/nathanfaucett/rs-scene_graph.git"
[dependencies.scene_renderer]
git = "https://github.com/nathanfaucett/rs-scene_renderer.git"

[dependencies.gl_renderer_plugin]
git = "https://github.com/nathanfaucett/rs-gl_renderer_plugin.git"

[dependencies.mesh_component]
git = "https://github.com/nathanfaucett/rs-mesh_component.git"
[dependencies.camera_components]
git = "https://github.com/nathanfaucett/rs-camera_components.git"
[dependencies.transform_components]
git = "https://github.com/nathanfaucett/rs-transform_components.git"

[dependencies.mat3]
git = "https://github.com/nathanfaucett/rs-mat3.git"
[dependencies.mat4]
git = "https://github.com/nathanfaucett/rs-mat4.git"

[dependencies.shared]
git = "https://github.com/nathanfaucett/rs-shared.git"
