[package]
name = "example"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
gl = "0.6.1"
glutin = "0.7.0"

[dependencies.vector]
git = "https://github.com/nathanfaucett/rs-vector"

[dependencies.gl_context]
git = "https://github.com/nathanfaucett/rs-gl_context"

[dependencies.geometry]
git = "https://github.com/nathanfaucett/rs-geometry.git"
[dependencies.material]
git = "https://github.com/nathanfaucett/rs-material.git"
[dependencies.shader]
git = "https://github.com/nathanfaucett/rs-shader.git"

[dependencies.camera_components]
git = "https://github.com/nathanfaucett/rs-camera_components.git"
[dependencies.transform_components]
git = "https://github.com/nathanfaucett/rs-transform_components.git"

[dependencies.scene_renderer]
git = "https://github.com/nathanfaucett/rs-scene_renderer.git"
[dependencies.scene_graph]
git = "https://github.com/nathanfaucett/rs-scene_graph.git"

[dependencies.mesh_component]
git = "https://github.com/nathanfaucett/rs-mesh_component.git"

[dependencies.gl_renderer_plugin]
git = "https://github.com/nathanfaucett/rs-gl_renderer_plugin.git"

[dependencies.mesh_gl_renderer]
path = ".."
