[package]
name = "example"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
gl = "*"
glutin = "*"
time = "0.1"

vector = {git = "https://github.com/nathanfaucett/rs-vector.git"}

gl_context = {git = "https://github.com/nathanfaucett/rs-gl_context.git"}

geometry = {git = "https://github.com/nathanfaucett/rs-geometry.git"}
material = {git = "https://github.com/nathanfaucett/rs-material.git"}
shader = {git = "https://github.com/nathanfaucett/rs-shader.git"}

camera_components = {git = "https://github.com/nathanfaucett/rs-camera_components.git"}
transform_components = {git = "https://github.com/nathanfaucett/rs-transform_components.git"}
mesh_component = {git = "https://github.com/nathanfaucett/rs-mesh_component.git"}

scene_renderer = {git = "https://github.com/nathanfaucett/rs-scene_renderer.git"}
scene_graph = {git = "https://github.com/nathanfaucett/rs-scene_graph.git"}

gl_renderer_plugin = {git = "https://github.com/nathanfaucett/rs-gl_renderer_plugin.git"}

mesh_gl_renderer = {path = ".."}
